--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Saúde</h2>
     <body>
         <div class="container">
             <div id="imagem">
-    <img2 src="https://www.agenciapara.com.br/midias/2022/grandes/up_ag_36795_665919e0-e096-6290-a539-fd24d78cc50d.jpg"/>
+    <img src="https://www.agenciapara.com.br/midias/2022/grandes/up_ag_36795_665919e0-e096-6290-a539-fd24d78cc50d.jpg">
 
 
 </p>2. Tratamentos Personalizados e Inovadores:
@@ -54,7 +54,7 @@ Saúde</h2>
     <body>
         <div class="container">
             <div id="imagem">
-    <img3 src="https://img.freepik.com/fotos-gratis/medico-aconselhando-o-paciente-on-line-com-laptop_155003-8508.jpg?w=900&t=st=1708688187~exp=1708688787~hmac=c8b8e13821748fd7b0ca454e5f849153891b58024574ccb1b33546f99ecd5d65" />
+    <img src="https://img.freepik.com/fotos-gratis/medico-aconselhando-o-paciente-on-line-com-laptop_155003-8508.jpg?w=900&t=st=1708688187~exp=1708688787~hmac=c8b8e13821748fd7b0ca454e5f849153891b58024574ccb1b33546f99ecd5d65">
 
 
     </p>4. Gerenciamento Avançado de Dados e IA:
