--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Saúde</h1>
 <h2>Benefícios da Tecnologia na
 
 Saúde</h2>
-<p>Na tecnologia tem desempenhado um papel cada vez mais crucial na transformação da área da saúde, proporcionando uma série de benefícios que melhoram significativamente os cuidados médicos e o bem-estar dos pacientes</p>
+<p>A tecnologia tem desempenhado um papel cada vez mais crucial na transformação da área da saúde, proporcionando uma série de benefícios que melhoram significativamente os cuidados médicos e o bem-estar dos pacientes</p>
     
     </p>1. Diagnóstico Avançado e Precoce:
     Com o avanço da tecnologia, os diagnósticos médicos se tornaram mais precisos e rápidos, permitindo uma detecção precoce de condições médicas e um tratamento mais eficaz. Equipamentos de imagem avançados, como ressonância magnética e tomografia computadorizada, fornecem aos médicos uma visão detalhada do corpo humano, facilitando a identificação de problemas de saúde. Além disso, algoritmos de inteligência artificial estão sendo aplicados para analisar grandes conjuntos de dados de pacientes e ajudar na interpretação de resultados de exames.</p>
