--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@ Saúde</h2>
 
     </p>Em suma, a tecnologia está revolucionando a área da saúde de maneiras inimagináveis, proporcionando diagnósticos mais precisos, tratamentos mais eficazes e um maior acesso aos serviços médicos. À medida que continuamos a avançar nesta era digital, é crucial aproveitar todo o potencial da tecnologia para melhorar a saúde e o bem-estar das pessoas em todo o mundo..</p>
         
+    </div>
+    <legend>DEIXE UMA SUGESTÃO - <COLOR id="colorA">A</COLOR></legend>
+    <color id="colorA">
+        <form>
+
+            Nome <input type="text" name="nome" id="txtNone">
+            <br>
+            Sobrenome <input type="text" name="sobrenome" id="txtSobrenome">
+
+        </form>
+
+        <form>
+            <h3>Comentario:</h3>
+            <textarea rows="5" cols="30"></textarea>
+        </form>
+
+
+        <input type="submit" value=" Enviar"/>
+    </color>
+    </div>
 </section>
 </main>
 <footer>
