--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@ Saúde</h2>
 
 
     </div>
-    <legend>ALGUM COMENTARIO OU SUGESTÃO?<COLOR id="colorA"></COLOR></legend id=legend>
-    <color id="colorA">
+    <legend id=legend>ALGUM COMENTARIO OU SUGESTÃO?<COLOR id="colorA"></COLOR></legend id=legend>
+    <color id="colorA"
+    id=legend>
         <form>
 
             Nome <input type="text" name="nome" id="txtNone">
