--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@ Saúde</h2>
     id=legend>
         <form>
 
-            Nome <input type="text" name="nome" id="txtNone">
+            Nome <input type="text" name="nome" id="txtNone" id=legend>
             <br>
-            Sobrenome <input type="text" name="sobrenome" id="txtSobrenome">
+            Sobrenome <input type="text" name="sobrenome" id="txtSobrenome" id=legend>
 
-        </form>
+        </form id=legend>
 
-        <form>
-            <h3>Comentario:</h3>
-            <textarea rows="5" cols="30"></textarea>
-        </form>
+        <form id=legend>
+            <h3>Comentario:</h3 id=legend>
+            <textarea rows="5" cols="30" id=legend></textarea id=legend>
+        </form id=legend>
 
 
-        <input type="submit" value=" Enviar"/>
+        <input type="submit" value=" Enviar" id=legend/>
     </color>
     </div>
 </section>
