--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ Saúde</h2>
     id=legend>
         <form>
 
-            Nome <input type="text" name="nome" id="txtNone" id=legend>
+            Nome <input type="text" name="nome"  id=legend>
             <br>
-            Sobrenome <input type="text" name="sobrenome" id="txtSobrenome" id=legend>
+            Sobrenome <input type="text" name="sobrenome"  id=legend>
 
         </form id=legend>
 
