--- a/index.html
+++ b/index.html
@@ -69,24 +69,23 @@ Saúde</h2>
 
 
     </div>
-    <legend id=legend>ALGUM COMENTARIO OU SUGESTÃO?<COLOR id="colorA"></COLOR></legend id=legend>
-    <color id="colorA"
-    id=legend>
+    <legend>ALGUM COMENTARIO OU SUGESTÃO?<COLOR id="colorA"></COLOR></legend>
+    <color id="colorA">
         <form>
 
-            Nome <input type="text" name="nome"  id=legend>
+            Nome <input type="text" name="nome" id="txtNone">
             <br>
-            Sobrenome <input type="text" name="sobrenome"  id=legend>
+            Sobrenome <input type="text" name="sobrenome" id="txtSobrenome">
 
-        </form id=legend>
+        </form>
 
-        <form id=legend>
-            <h3>Comentario:</h3 id=legend>
-            <textarea rows="5" cols="30" id=legend></textarea id=legend>
-        </form id=legend>
+        <form>
+            <h3>Comentario:</h3>
+            <textarea rows="5" cols="30"></textarea>
+        </form>
 
 
-        <input type="submit" value=" Enviar" id=legend/>
+        <input type="submit" value=" Enviar"/>
     </color>
     </div>
 </section>
