--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Saúde</h2>
 
     </div>
     <legend id="legend">ALGUM COMENTARIO OU SUGESTÃO?<COLOR id="colorA" id=legend></COLOR></legend>
-    <color id="colorA" id=legend>
+    <color id="colorA">
         <form>
 
             Nome <input type="text" name="nome" id="txtNone">
