--- a/index.html
+++ b/index.html
@@ -69,17 +69,24 @@ Saúde</h2>
 
 
     </div>
-    <h2 id="legend"><nav>ALGUM COMENTARIO OU SUGESTÃO?</nav></h2>
-
-    <div class="bord">
+    <legend id="legend">ALGUM COMENTARIO OU SUGESTÃO? <COLOR id="colorA"></COLOR></legend>
+    <color id="colorA">
         <form>
+
             Nome <input type="text" name="nome" id="txtNone">
-            <br> <br>
+            <br>
             Sobrenome <input type="text" name="sobrenome" id="txtSobrenome">
-            <br> <br>
-            <input type="submit" value=" Enviar"/>
+
         </form>
-       
+
+        <form>
+            <h3>Comentario:</h3>
+            <textarea rows="5" cols="30"></textarea>
+        </form>
+
+
+        <input type="submit" value=" Enviar"/>
+    </color>
     </div>
 </section>
 </main>
