--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Saúde</h2>
 
 
     </div>
-    <legend id="legend">ALGUM COMENTARIO OU SUGESTÃO? <COLOR id="colorA"></COLOR></legend>
+    <legend id="legend">ALGUM COMENTARIO OU SUGESTÃO? <COLOR id="colorA" id="legend"></COLOR></legend>
     <color id="colorA">
         <form>
 
