--- a/index.html
+++ b/index.html
@@ -93,5 +93,13 @@ Saúde</h2>
 <footer>
 <p>&copy; 2024 Lorena</p>
 </footer>
+
+<h2>Este é o link para falar comigo pessoalmente</h2>
+
+<p>Me mande um email!</p>
+
+<p><a href="lorenarodrigues5058@gmail.com">Send email</a></p>
+
+</body>
 </body>
 </html>
