--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Saúde</h2>
 <p>&copy; 2024 Lorena</p>
 </footer>
 
-<h2>Este é o link para falar comigo pessoalmente</h2>
+<h2>Este é o link para falar comigo diretamente</h2>
 
 <p>Me mande um email!</p>
 
